content/docs/3.1/2-implementing-core-features/6-highlights.mdx
---
posttype: "docs"
title: Highlights
metaTitle: "Highlights"
metaDescription: "ReactGrid docs"
---
import { ReactGrid } from "@silevis/reactgrid";
const code = `const HighlightsSample = () => {
  const [columns, setColumns] = React.useState<Column[]>(() => [
    { columnId: "Name", width: 100 },
    { columnId: "Surname", width: 100 }
  ]);
  ${``}
  const [rows, setRows] = React.useState<Row[]>(() => [
    {
      rowId: 0,
      cells: [
        { type: "header", text: "Name" },
        { type: "header", text: "Surname" }
      ]
    },
    {
      rowId: 1,
      cells: [
        { type: "text", text: "Thomas" },
        { type: "text", text: "Goldman" }
      ]
    },
    {
      rowId: 2,
      cells: [
        { type: "text", text: "Susie" },
        { type: "text", text: "Spencer" }
      ]
    },
    {
      rowId: 3,
      cells: [
        { type: "text", text: "" },
        { type: "text", text: "" }
      ]
    }
  ]);
  ${``}
  const highlights: Highlight[] = [
    { columnId: "Name", rowId: 1, borderColor: "#00ff00" },
    { columnId: "Surname", rowId: 2, borderColor: "#0000ff" },
    { columnId: "Name", rowId: 3, borderColor: "#ff0000" }
  ];
  ${``}
  return (
    <ReactGrid
      rows={rows}
      columns={columns}
      highlights={highlights}
    />
  );
}
${``}
render(<HighlightsSample/>)
`;

#### Highlights usage

This guide is based on [getting started](/docs/3.1/1-getting-started/).

Highlights allow you to alter arbitrary cells in the grid
by applying custom CSS classes to them or by setting their border colours.

1. Import the [`Highlight`](/docs/3.1/7-api/0-interfaces/9-highlight/) interface

```ts
import { ReactGrid, Highlight } from "@silevis/reactgrid";
```

2. Define an array of [`Highlight`](/docs/3.1/7-api/0-interfaces/9-highlight/) objects

```ts
const highlights: Highlight[] = [
  { columnId: "Name", rowId: 1, borderColor: "#00ff00" },
  { columnId: "Surname", rowId: 2, borderColor: "#0000ff" },
  { columnId: "Name", rowId: 3, borderColor: "#ff0000" }
];
```

3. Pass the `highlights` object array to your component

```tsx
return (
  <ReactGrid
    rows={rows}
    columns={columns}
    highlights={highlights} // highlight-line
  />
);
```

#### Live demo

<LiveCode 
  code={code}
  title='Advanced menu context handling live demo'
  noInline={true}
/> 